# tree-sitter-possum

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-possum.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_possum/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPossum/: possum.h
bindings/swift/TreeSitterPossumTests/: TreeSitterPossumTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: simple.txt
