[package]
name = "tree-sitter-possum"
description = "A tiny text parsing language"
version = "0.1.0"
authors = ["Elias Mulhall <eli.mulhall@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "possum"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mulias/possum_parser_language"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
